fix(sync): Remove conflit response from push and return isCoach in email verification
