# docs/swagger.json
@@ -2352,12 +2352,6 @@
                         "type": "string"
                     }
                 },
-                "conflicts": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "rejected": {
                     "type": "array",
                     "items": {
